# ai-daily-news

./: .gitignore  eslint.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api/chat/: route.ts
app/api/news/: route.ts
app/api/news/scrape/: route.ts
app/api/news/smol/: route.ts
app/favorites/: page.tsx
app/news/[id]/: page.tsx
components/: about-content.tsx
components/chat/: chat-widget.tsx
components/layout/: mobile-nav.tsx  sidebar.tsx  toast-provider.tsx
components/news/: highlight-card.tsx  news-card.tsx  news-skeleton.tsx
data/: news.json
hooks/: use-favorites.ts  use-theme.ts
lib/: constants.ts
python-backend/: .gitignore  pyproject.toml
python-backend/app/: server.py
scripts/: fetch-news.ts
types/: news.ts
web/: next.config.ts
web/src/app/: globals.css  layout.tsx
web/src/app/video/[id]/: page.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  ProgressBar.tsx  Spinner.tsx
web/src/lib/: api.ts
