# Pydantic AI Backend for AI Daily News
# Python FastAPI + Pydantic AI agent backend

[project]
name = "ai-daily-news-backend"
version = "0.1.0"
description = "Pydantic AI powered backend for AI Daily News consultation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-ai>=0.4.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "firecrawl-py>=4.22.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
